--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -629,7 +629,8 @@ span.comment_attribution {
   
   .two_cols {
   	-moz-column-count: 2;
-  	/* -webkit-column-count: 2; There seems to be a webkit bug that causes a mis-render */
+  	-webkit-column-count: 2; /* There seems to be a webkit bug that causes a mis-render */
+  	column-count: 2;
   }
   
   .summary_chart {
