Form layout: two cols CSS

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -18,7 +18,7 @@
 #if($fieldCategory == "SEPARATOR")
   ## Start a section (block)
   #if($inBlock) </div> #end
-  <div class="block"><h1>$field<h1>
+  <div class="block"><h1>$field</h1>
   #set($inBlock = true)
 #else
   #if($field.getClass().getSimpleName().equals("RelationFieldDefn"))
