Form layout: fields before first section

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
@@ -26,6 +26,8 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/edit")
 #set($tabCaption='edit')
 #set($sessionTable=$sessionData.getTable())
 #set($fields = $sessionTable.getFields())
+#set($firstField = $fields.first())
+#set($lastField = $fields.last())
 #set($formStyle = $sessionTable.getFormStyle())
 #set($sessionReport=$sessionData.getReport())
 #set($sessionRowId=$sessionData.getRowId())
