Form layout: fields before first section: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
@@ -110,6 +110,7 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/edit")
           #if($field.getHidden() == false)
             #if(!$firstField)
               #set($firstField = $field)
+              First field is $firstField<br>
             #end
             #parse("gui/reports_and_tables/tabs/table_data_row.vm")
           #end
