--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -27,9 +27,7 @@
   <div class="block"><h1>$field</h1>
 #else
   #if($field.equals($firstField))
-    <div class="block two_cols">FIRST FIELD.
-  #else
-    NOT FIRST FIELD.
+    <div class="block two_cols" style="background-color:#f4f4f4">
   #end
   #if($field.getClass().getSimpleName().equals("RelationFieldDefn"))
     $field.getSimplifiedFieldName()
