Form layout: inputs

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -587,6 +587,10 @@ div#reportData {
 	margin-right: 1em;
 }
 
+#reportData .block input[type=text] {
+  float: right;
+}
+
 /* 3) Summary tab css */
 
 
