Form layout: inputs

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -33,7 +33,7 @@
     $field.getSimplifiedFieldName()
   #else
     $field
-  #end<br>
+  #end
   #parse('gui/resources/input/input.vm')
 #end
 #if($field.equals($lastField))
