Form layout: inputs

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -589,10 +589,12 @@ div#reportData {
 
 #reportData .block input {
   float: right;
+  width: 60%;
 }
 
 #reportData .block input[type=checkbox] {
   float: left;
+  width: auto;
 }
 
 /* 3) Summary tab css */
