Form layout: inputs

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -592,7 +592,7 @@ div#reportData {
   width: 60%;
 }
 
-#reportData .block input[type=checkbox] {
+#reportData .block input[type!=text] {
   float: left;
   width: auto;
 }
