Form layout: inputs

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -587,7 +587,7 @@ div#reportData {
 	margin-right: 1em;
 }
 
-#reportData .block input {
+#reportData .block input,select {
   float: right;
   width: 60%;
 }
