Form layout: relation inputs

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -29,9 +29,8 @@
   #if($field.equals($firstField))
     <div class="block two_cols" style="background-color:#f4f4f4">
   #end
-  #if($field.getClass().getSimpleName().equals("RelationFieldDefn"))
-    $field.getSimplifiedFieldName()
-  #else
+  #if(!$field.getClass().getSimpleName().equals("RelationFieldDefn"))
+    ## relation field name included in resources/input/relation.vm
     $field
   #end
   #parse('gui/resources/input/input.vm')
