--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/relation.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/relation.vm
@@ -70,6 +70,7 @@
 #else
   #if($userCanEdit)
   <div class="relation_field">##
+    $field.getSimplifiedFieldName()
     <input name="$internalFieldName" ##
   	type="hidden" class="relation_hidden" ##
   	value="$fieldValue" ##
