Form layout: relation inputs

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -438,7 +438,7 @@ div.relation_field {
 }
 
     div.relation_field input {
-      margin-right:10px;
+      /* margin-right:10px; */
     }
   
   div.relation_field span {
