Form layout: relation inputs

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/file.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/file.vm
@@ -65,7 +65,7 @@
   #end ## if !$fieldValueObject.isNull()
   #if(!$fieldValueObject.isNull())
     #if($fieldValueObject.isImage())
-    #if($userCanEdit)<br />#end
+    ## #if($userCanEdit)<br />#end
       <a href="$downloadUrl" target="_blank">
       <img border="0" src="$downloadUrl.500.$fieldValueObject.getExtension()" style="float:left; max-width: 100%"/>
       </a>
