--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/file.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/file.vm
@@ -76,6 +76,9 @@
   	  <input type="file" name="$field.getInternalFieldName()" >
   	#else
       <form method="post" enctype="multipart/form-data" action="AppController.servlet" class="fileUploader">
+        #if($fieldValueObject.isNull() || (!$fieldValueObject.isImage()))
+          $field
+        #end
         <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
         <input type="hidden" name="update_record" value="true" />
         <input type="hidden" name="internaltablename" value="$sessionTable.getInternalTableName()" />
