--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -596,6 +596,8 @@ div#reportData {
   margin: 0;
   margin-bottom: 1em;
   font-size: 120%;
+  font-weight: normal;
+  text-align: center;
 }
 
 #reportData .block img {
@@ -610,13 +612,15 @@ div#reportData {
 #reportData .block input[type=checkbox] {
   float: left;
   width: auto;
+  margin-right: 1em;
+  margin-top: 0;
 }
-
+/*
 #reportData .block input[type=file] {
   float: left;
   width: auto;
 }
-
+*/
 /* 3) Summary tab css */
 
 
