--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -34,7 +34,7 @@
     <div class="block two_cols non_section">
   #end
   #set($fieldClass = $field.getClass().getSimpleName())
-  #if(!$fieldClass.equals("RelationFieldDefn") && (!$fieldCategory == "FILE"))
+  #if(!$fieldClass.equals("RelationFieldDefn") && ($fieldCategory != "FILE"))
     ## relation and file field names included in resources/input/relation.vm
     $field
   #end
