--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -107,8 +107,10 @@ td.trailing input[type=button] {
  }
 */
 .tab-interface .tab-content .tab-item._1 {
-  margin-top: 1em;
+  padding-top: 1em;
+  background-color: #f4f4f4;
 }
+
 .tab-interface .tab-content div.content { 
   width:100%;
   height:100%;
