--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -407,6 +407,8 @@ img.mini_icon {
   background-color: #f0f0f0;
   font-weight: normal;
   text-transform: lowercase;
+  top: 0;
+  opacity: 0.9;
 }
 
 table#reportData th div.mini_action {
