No-border inputs: test

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -613,7 +613,7 @@ div#reportData {
 }
 
 #reportData .block input:hover {
-  border: auto;
+  border: 1px solid black;
 }
 
 #reportData .block input[type=checkbox] {
