--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -610,10 +610,11 @@ div#reportData {
   float: right;
   width: 60%;
   border: 0;
+  padding: 0.5em;
 }
 
-#reportData .block input:hover {
-  border: 1px solid black;
+#reportData .block input:hover,input:focus {
+  border: 1px solid #cccccc;
 }
 
 #reportData .block input[type=checkbox] {
