--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/file.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/file.vm
@@ -76,14 +76,16 @@
   	  <input type="file" name="$field.getInternalFieldName()" >
   	#else
       <form method="post" enctype="multipart/form-data" action="AppController.servlet" class="fileUploader">
+        #set($showFieldName = false)
         #if($fieldValueObject.isNull() || (!$fieldValueObject.isImage()))
           $field
+          #set($showFieldName = true)
         #end
         <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
         <input type="hidden" name="update_record" value="true" />
         <input type="hidden" name="internaltablename" value="$sessionTable.getInternalTableName()" />
         <input type="hidden" name="rowid" value="$sessionRowId" />
-        <input type="file" name="$field.getInternalFieldName()" onchange="uploadFile(this);" class="submit-trigger" />
+        <input type="file" name="$field.getInternalFieldName()" onchange="uploadFile(this);" class="submit-trigger" #if(!$showFieldName) style="float:left" #end />
         <div class="upload_progress_container">
           <div class="upload_progress_bar"></div>
           <span class="upload_info" upload_speed="$view.getUploadSpeed()"></span>
