--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/input.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/input.vm
@@ -31,9 +31,15 @@
 #set($fieldValue="") ##reset fieldValue since last usage
 #if(!$tabIndex) #set($tabIndex = 0) #end
 #set($tabIndex = $tabIndex + 1)
-#parse("gui/resources/input/${fieldCategory.toString().toLowerCase()}.vm")
+#set($activateComments = false)
 #if($userCanEdit && (!$globalEdit) && (!$gtpbPublicTable))
+  #set($activateComments = true)
+#end
+#if($activateComments) ## TODO: test with SINGLE_COLUMN
   <img src="resources/icons/comment.png" class="comment_toggle" title="add a comment" alt="add comment"/>
+#end
+#parse("gui/resources/input/${fieldCategory.toString().toLowerCase()}.vm")
+#if($activateComments)
   ## Comments
   <div class="add_comment_row">Add comment: <input type="text" class="comment_input" rowid="$sessionRowId" internalfieldname="$field.getInternalFieldName()" internaltablename="$sessionTable.getInternalTableName()"/><input type="button" value="add" /></div>
   <div class="comments" id="comments_$field.getInternalFieldName()">
