--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -602,6 +602,7 @@ div#reportData {
   padding: 1em;
   border-radius: 0.5em;
   break-inside: avoid-column;
+  line-height: 2em;
 }
 
 #reportData .block h1 {
