Two-col: comments

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -515,6 +515,7 @@ div.relation_field {
 .block comment_toggle {
   margin-left:0em;
   margin-right:0em;
+  float: right;
 }
 
 tr:hover .comment_toggle {
